Adding protos to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,33 @@
-﻿cmake_minimum_required (VERSION 3.10)
+﻿cmake_minimum_required(VERSION 3.12)
+project(SimpleBackendServiceCpp)
 
-# Enable Hot Reload for MSVC compilers if supported.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
-
-project ("SimpleBackendServiceCpp")
-
+# Packages
 find_package(Protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 
-add_executable(SimpleBackendServiceCpp "src/main.cpp")
+# Proto files
+set(PROTO_FILES
+    proto/jobs.proto
+)
 
-target_link_libraries(SimpleBackendServiceCpp PRIVATE protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite)
-target_link_libraries(SimpleBackendServiceCpp PRIVATE gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts)
+# Executables
+add_executable(SimpleBackendServiceCpp
+  "src/server/main.cpp"
+ "src/core/job.cpp" "src/core/job.h" "src/core/job_handler.h" "src/core/job_queue.h" "src/core/job_queue.cpp" "src/core/executor.h" "src/core/executor.cpp")
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET SimpleBackendServiceCpp PROPERTY CXX_STANDARD 20)
-endif()
+# Include generated protobuff files
+target_include_directories(SimpleBackendServiceCpp PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+
+# Linked libraries
+target_link_libraries(SimpleBackendServiceCpp PRIVATE
+  protobuf::libprotoc
+  protobuf::libprotobuf
+  gRPC::grpc
+  gRPC::grpc++
+)
+
+set_property(TARGET SimpleBackendServiceCpp PROPERTY CXX_STANDARD 20)
+
+get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
+protobuf_generate(TARGET SimpleBackendServiceCpp LANGUAGE cpp PROTOS ${PROTO_FILES})
+protobuf_generate(TARGET SimpleBackendServiceCpp LANGUAGE grpc GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc PLUGIN "protoc-gen-grpc=${grpc_cpp_plugin_location}" PROTOS ${PROTO_FILES})
