create rest server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ set(PROTO_FILES
 add_executable(SimpleBackendServiceCpp
   "src/server/main.cpp"
   "src/core/job.cpp" "src/core/job_queue.cpp" "src/core/executor.cpp" 
-  "src/intermediate/job_repository.cpp" "src/intermediate/job_submission_service.cpp")
+  "src/intermediate/job_repository.cpp" "src/intermediate/job_submission_service.cpp" 
+  "src/server/rest_server.cpp")
 
 # Include generated protobuff files
 target_include_directories(SimpleBackendServiceCpp PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
