--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,10 @@
 find_package(GTest REQUIRED)
 
+add_executable(Tests
+ "src/test_utils.cpp"
+ "src/main/executor_test.cpp"
+ )
+
 target_include_directories(Tests PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../src
     ${CMAKE_CURRENT_SOURCE_DIR}/src
