--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,8 +2,8 @@ find_package(GTest REQUIRED)
 
 add_executable(Tests
  "src/test_utils.cpp"
- "src/main/executor_test.cpp"
   "src/handlers/quadratic_equation_handler_test.cpp")
+ "src/main/executor_run_test.cpp"
 
 target_include_directories(Tests PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../src
